show data di mapsActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
         <item>Polygon</item>
         <item>Line</item>
     </string-array>
+    <string name="title_activity_user">Map</string>
 </resources>
