add circle type

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="instruction_radius_description">tentukan radius</string>
     <string name="instruction_message_description">tulis Nama Location</string>
     <string name="error_required">Isi Nama Lokasi</string>
+    <string name="title_activity_add_new_point">Map</string>
     <string-array name="spinner_method_geofence">
         <item>Cirlce</item>
         <item>Polygon</item>
