--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,17 @@
     <string name="instruction_message_description">tulis Nama Location</string>
     <string name="error_required">Isi Nama Lokasi</string>
     <string name="title_activity_add_new_point">Map</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
+
+    <string name="start_level">Level 1</string>
+    <string name="next_level">Next Level</string>
+    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
+    <!-- -
+        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
+        For more information, see https://support.google.com/admob/answer/3052638
+    <!- -->
     <string-array name="spinner_method_geofence">
         <item>Cirlce</item>
         <item>Polygon</item>
