--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="geofence_too_many_pending_intents">
     You have provided too many PendingIntents to the addGeofences() call.
   </string>
+    <string name="title_activity_edit_radius">Edit Radius</string>
 </resources>
